--- a/views/head.jade
+++ b/views/head.jade
@@ -6,6 +6,7 @@ html
 		title Service Oriented Architecture Manager
 		link(rel='stylesheet', href='/javascripts/vendor/perfect-scrollbar/min/perfect-scrollbar.min.css', type='text/css')
 		link(rel='stylesheet', href='/javascripts/vendor/bootstrap/dist/css/bootstrap.css', type='text/css')
+		link(rel='stylesheet', href='/javascripts/vendor/bootstrap/dist/css/bootstrap-theme.css', type='text/css')
 		link(rel='stylesheet', href='/stylesheets/style.css', type='text/css')
 
 	body(ng-app="soam")
