--- a/views/index.jade
+++ b/views/index.jade
@@ -5,14 +5,18 @@ block body
 
 	div(ng-controller="terminalsCtrl")
 		tabset
-			tab(ng-repeat="terminal in terminals", heading="{{terminal.title}}")
+			tab(ng-repeat="terminal in terminals")
+				tab-heading {{terminal.title}} 
+					a(ng-click="removeTerminal($index)", href='')
+						&#10006;
 				perfect-scrollbar.terminal.scroller(scroll-glue, wheel-propagation="true", wheel-speed="10", min-scrollbar-length="20")
 					div.terminal(ng-bind-html="terminal.content")
 
 
-	script(src="https://cdn.socket.io/socket.io-1.3.5.js")
+	script(src="/socket.io/socket.io.js")
 
 	script(src='/javascripts/vendor/jquery/dist/jquery.js')
+	script(src='/javascripts/vendor/bootstrap/dist/js/bootstrap.js')
 
 	script(src='/javascripts/vendor/angular/angular.js')
 	script(src='/javascripts/textAngular-sanitize.js')
