--- a/views/index.jade
+++ b/views/index.jade
@@ -2,7 +2,7 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    title Service Oriented Architecture Manager
+    title LogIO-Docker
     base(href='/')
     link(href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600', rel='stylesheet', type='text/css')
     link(href='https://fonts.googleapis.com/css?family=Inconsolata', rel='stylesheet', type='text/css')
